--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-geolocated": "^4.3.0"
+    "react-geolocated": "^4.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
