--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "axios": "^1.8.4",
     "next": "15.2.3",
