--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-geolocated": "^4.3.0",
+    "react-spinners": "^0.15.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
