--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.4",
     "next": "15.2.3",
     "pg": "^8.14.1",
