--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-geolocated": "^4.3.0",
     "react-spinners": "^0.15.0",
     "uuid": "^11.1.0",
