--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@prisma/extension-accelerate": "^1.3.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
+    "jose": "^6.0.10",
     "next": "15.2.3",
     "pg": "^8.14.1",
     "react": "^19.0.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
