--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@aws-sdk/client-s3": "^3.772.0",
     "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@radix-ui/react-checkbox": "^1.1.5",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jose": "^6.0.10",
+    "lucide-react": "^0.487.0",
     "next": "15.2.3",
     "pg": "^8.14.1",
     "react": "^19.0.0",
@@ -24,6 +28,8 @@
     "react-error-boundary": "^5.0.0",
     "react-geolocated": "^4.3.0",
     "react-spinners": "^0.15.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
