--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-geolocated": "^4.3.0",
+    "react-hook-form": "^7.55.0",
     "react-spinners": "^0.15.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
