--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "next-auth": "^5.0.0-beta.25",
     "@aws-sdk/client-s3": "^3.772.0",
     "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.3.0",
